<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="16dp"

    android:weightSum="10"
    tools:context=".SecondActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/zdjecie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="32dp"

                android:src="@drawable/jg"
                app:layout_constraintBottom_toTopOf="@id/tableLayout"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/kod_kreskowy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zdjecie"
                >

                <TableRow
                    style="@style/TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableColumn"
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imie" />

                    <TextView
                        android:id="@+id/imie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>

                <TableRow
                    style="@style/TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/TableColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nazwisko" />

                    <TextView
                        android:id="@+id/nazwisko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>

                <TableRow
                    style="@style/TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/TableColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_urodzenia" />

                    <TextView
                        android:id="@+id/data_urodzenia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>

                <TableRow
                    style="@style/TableRow"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/TableColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obywatelstwo" />

                    <TextView
                        android:id="@+id/obywatelstwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

                <TableRow
                    style="@style/TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableColumn"
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/przydzial_sernika" />

                    <TextView
                        android:id="@+id/przydzial_sernika"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>

                <TableRow
                    style="@style/TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableColumn"
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organ_wydawczy" />

                    <TextView
                        android:id="@+id/organ_wydawczy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>

                <TableRow
                    style="@style/TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableColumn"
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_waznosci" />

                    <TextView
                        android:id="@+id/data_waznosci"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>

            </TableLayout>

            <ImageView
                android:id="@+id/kod_kreskowy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tableLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wroc"
        />

</LinearLayout>